fine tune styling of Color page to fill entire height of page

--- a/components/color/Color.module.css
+++ b/components/color/Color.module.css
@@ -1,5 +1,5 @@
 .Color {
-    background-color: white;
-  
-    padding: var(--general-padding);
-  }
+  background-color: white;
+  padding: var(--general-padding);
+  height: 50rem;
+}
