--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,19 +1,13 @@
 * {
   padding: 0;
-  margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
-}
-
-/* a {
-  color: inherit;
-  text-decoration: none;
-} */
-
-* {
   box-sizing: border-box;
+  margin: 0;
 }
 
 :root {
- --general-padding: .25rem;
+  --general-padding: 0.25rem;
+}
+
+body {
+  background-color: lightblue;
 }
